# psx-ecs

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  color.h  disc.c  disc.h  double_buffer.c  double_buffer.h  entity.c  entity.h  iso.xml  main.c  position_component.c  position_component.h  system.cnf  tile_primative_component.c  tile_primative_component.h
